changed task schema to include fields for date, time and user which created the task + added cron job for handling automatic task status updates
